@@ -1,5 +1,7 @@
 2008-12-01  higepon  <higepon@users.sourceforge.jp>
 
+        * tail-context => #t when starting compilation.
+
         * compiler.scm (iform-copy-zip-lvs): Fixed the bug of miss copying of $lambda.lvars.ref-count.
                                              See http://d.hatena.ne.jp/higepon/20081201/1228113798.
 
